# dislocal

./: Cargo.toml
client-cli/: Cargo.toml
proto/: Cargo.toml
proto-macros/: Cargo.toml
proto-macros/src/: lib.rs
proto/src/: lib.rs
proto/src/error/: mod.rs
server-cli/: Cargo.toml
server-cli/src/: lib.rs  main.rs
server-cli/src/error/: mod.rs
server-cli/src/instrument/: mod.rs
